# SQL-Agent

./: .dockerignore  .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml
.agent/workflows/: agent-design.md
data/sql_examples/: base_examples.json  learned_examples.json
data/sql_examples/faiss_index/: index.faiss  metadata.json
docker/: Dockerfile  docker-compose.yml  my.cnf
docker/init/: 01_schema.sql  02_data_users.sql  03_data_addresses.sql  04_data_categories.sql  05_data_products.sql  06_data_product_images.sql  07_data_coupons.sql  08_data_orders.sql  09_data_order_items.sql  10_data_payments.sql  11_data_shipments.sql  12_data_reviews.sql  13_data_cart_items.sql  14_data_favorites.sql
qwen_raw/: langgraph.json  pyproject.toml
qwen_raw/src/: graph.py  schema.py  state.py
scripts/: init_rag.py  start_vllm.sh
src/: __init__.py
src/agents/: __init__.py  base.py  state.py
src/agents/supervisor/: __init__.py  agent.py  prompts.py
src/agents/workers/: __init__.py  chat_handler.py  example_agent.py  intent_classifier.py  schema_retriever.py  sql_executor.py  sql_generator.py
src/config/: __init__.py  llm.py  settings.py
src/graph/: __init__.py  workflow.py
src/rag/: __init__.py  data_loader.py  embeddings.py  feedback_loop.py  sql_generator_auto.py  sql_retriever.py  vector_store.py
